<resources>
    <string name="app_name">PracticaTema4</string>

    <string name="nombreNumerosPrimos">Números Primos</string>
    <string name="nombreJuegoAciertos">Juego de Aciertos</string>
    <string name="nombreDesplazandoImagenes">Desplazando Imágenes</string>
    <string name="nombreSeleccionandoImagenes">Seleccionando Imágenes</string>

    <string name="btnUno">Botón Nº1</string>
    <string name="btnDos">Botón Nº2</string>
    <string name="btnTres">Botón Nº3</string>
    <string name="btnCuatro">Botón Nº4</string>

    <string name="lblNumero">Introduce un numero para ver si es primo</string>
    <string name="txtNumero">Escribe el numero</string>
    <string name="btnCalcular">Calcular</string>
    <string name="lblResultado"></string>
    <string name="resultadoPt1">El numero</string>
    <string name="resultadoPrimo">es primo</string>
    <string name="resultadoNoPrimo">no es primo</string>

    <string name="p1">Afganistán</string>
    <string name="p2">Albania</string>
    <string name="p3">Alemania</string>
    <string name="p4">Andorra</string>
    <string name="p5">Angola</string>
    <string name="p6">Antigua y Barbuda</string>
    <string name="p7">Arabia Saudita</string>
    <string name="p8">Argelia</string>
    <string name="p9">Argentina</string>
    <string name="p10">Armenia</string>

    <string name="c1">Kabul</string>
    <string name="c2">Tirana</string>
    <string name="c3">Berlín</string>
    <string name="c4">Andorra la Vieja</string>
    <string name="c5">Luanda</string>
    <string name="c6">Saint John</string>
    <string name="c7">Riad</string>
    <string name="c8">Argel</string>
    <string name="c9">Buenos Aires</string>
    <string name="c10">Ereván</string>
    
    <string name="btnVerificar">Verificar</string>
    <string name="lblPais">Pais no elegido</string>
    <string name="lblCapital">Capital no elegida</string>

    <string name="btnPetunia">Petunia</string>
    <string name="btnOrquidea">Orquidea</string>
    <string name="btnDalia">Dalia</string>
    <string name="btnLirio">Lirio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
